--- a/examples/Lecture02/index.html
+++ b/examples/Lecture02/index.html
@@ -3,16 +3,22 @@
   <head>
     <meta charset="utf-8">
     <script src="app.js"></script>
-    <style>body { font-size: 1.5em; }</style>
+    <style>body { font-size: 1.4em; }</style>
     <title>Lecture 02 - Single Page Web Applications with AngularJS</title>
   </head>
   <body>
     <h1>Low Cohesion and Tight Coupling</h1>
     <div id="nameCalculator">
       <div>
-        Your name: <input type="text" id="name">
+        Your name: <input type="text" id="name" ng-app="testname" >
       </div>
       <div id="output"></div>
     </div>
+
+    <script>
+
+    var nameElem=document.getElementById("name");
+    console.log(nameElem);
+    </script>
   </body>
 </html>
