--- a/examples/Lecture04/index.html
+++ b/examples/Lecture04/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
-    <title>My first AngularJS App</title>
+    <title>Gagan My first AngularJS App</title>
   </head>
   <body>
     <div ng-controller="MyFirstController">
-
+      <input type="text" name="name" ng-model="name">
+      {{sayHello();}}
     </div>
   </body>
 </html>
