--- a/assignments/assignment1/assignment1-starter-code/index.html
+++ b/assignments/assignment1/assignment1-starter-code/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <title>Lunch Checker</title>
+    <meta charset="utf-8">
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <style>
@@ -9,19 +12,21 @@
     </style>
   </head>
 <body>
-   <div class="container">
+   <div class="container" ng-app="assignment1App" ng-controller="assignment1Controller">
      <h1>Lunch Checker</h1>
 
-         <div class="form-group">
+         <div class="form-group" >
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+             class="form-control" ng-model="lunchItems">
          </div>
+
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="count();">Check If Too Much</button>
          </div>
          <div class="form-group message">
            <!-- Your message can go here. -->
+           {{message}}
          </div>
    </div>
 
